<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="horizontal"
    android:gravity="center_horizontal"
   >

    <TextView
        android:id="@+id/btn_home_level1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textSize="25sp"

        android:textColor="#6aa1bd"
        android:text="@string/selected_home_level1"
        />
    <TextView
        android:id="@+id/btn_home_level2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"

        android:textColor="#6aa1bd"
        android:layout_marginRight="10dp"
        android:text="@string/selected_home_level2"
        />
    <TextView
        android:id="@+id/btn_home_level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="#6aa1bd"
        android:layout_marginRight="10dp"
        android:textSize="25sp"
        android:text="@string/selected_home_level3"
        />
</LinearLayout>
